<resources>
    <string name="app_name">Regimen</string>
    <string name="uj_elet">Egy új élet kezdődik!</string>
    <string name="kezdj_nk_bele">Kezdjünk bele</string>
    <string name="name">Név</string>
    <string name="gender">Nem</string>
    <string name="age">Kor</string>
    <string name="weight">Súly(kg)</string>
    <string name="height">Magasság(cm)</string>
    <string name="neck">Nyakkörfogat(cm)</string>
    <string name="waist">Derékbőség(cm)</string>
    <string name="hip">Csípőkörfogat(cm)</string>
    <string name="activity_level">Aktivitási szint</string>
    <string name="Male">Férfi</string>
    <string name="Female">Nő</string>
    <string name="back">Vissza</string>
    <string name="save">Mentés</string>
    <string name="menu_offer">Menu ajánlás</string>
    <string name="calculations">Számítások</string>
    <string name="change_details">Adatok változtatása</string>
    <string name="choose_from_the_options_below">Válassz az alábbi lehetőségek közül!</string>
    <string name="body_fat">Testzsír %</string>
    <string name="bmi">BMI</string>
    <string name="bmr">BMR(kcal)</string>
    <string name="click_on_the_pictures_for_the_recipe">Koppints a képre a receptért!</string>
    <string name="basic_calculation_results_and_macro_nutrient_requirement">Számítási eredmények és makronutriens arányok</string>
    <string name="click_on">Válassz az alábbi lehetőségek közül!</string>
    <string name="kcal">Kcal</string>
    <string name="feherje">Fehérje</string>
    <string name="szenhidrat">Szénhidrát</string>
    <string name="zsir">Zsír</string>
    <string name="kesz_kaja">100 g elkészített étel kalória- és makrotápanyagtartalma</string>
    <string name="hozzavalok">Hozzávalók egy adaghoz</string>
    <string name="elkeszites">Elkészítés</string>
    <string-array name="activity_levels">
        <item>Sedentary</item>
        <item>Light exercise</item>
        <item>Moderate exercise</item>
        <item>Heavy exercise</item>
        <item>Athlete</item>
    </string-array>
    <string name="title_activity_explain">ExplainActivity</string>
    <string name="aktivitas_kivalasztasa">Aktivitási szint kiválasztása</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="aktivitas">Aktivitási szint</string>
    <string name="magyarazat">Magyarázat</string>
    <string name="irodai">Ülő vagy irodai munka</string>
    <string name="konnyu">Könnyű fizikai munka</string>
    <string name="mersekelt">Mérsékelt fizikai munka</string>
    <string name="nehez">Nehéz fizikai munka</string>
    <string name="verseny">Verseny szintű sportolás</string>
    <string name="mosolygos_reggeli">5 ek olajat felhevítünk, és beleütjük a tojást úgy, hogy egybemaradjon. Lejjebb vesszük a tüzet alatta, és lassan megsütjük. A virslit megfőzzük. A sült tojást egy tányérra egymás mellé tesszük. A főtt virslit eldaraboljuk (ez lesz a szája és az orra). A paprikát felszeleteljük.Egy-egy szeletet a tojásra teszünk úgy, hogy a sárgája középen maradjon. Egy szeletet kettévágunk (ez lesz a szemüveg szára). 1 db olívabogyót kettévágunk, és a tojássárgájára tesszük. Fodros petrezselyem lesz a haja.</string>
    <string name="gyumolcsrizs">A rizst átválogatjuk, megmossuk és 0.5 dl forrásban lévő vízbe dobjuk. Néha megkeverjük és addig főzzük, amíg a vizet fel nem szívja.Hozzáöntjük a tejet, beletesszük a csipet sót és a vajat. Beleszórunk 1 evőkanál kristálycukrot. Lefedve 3-4 percig forraljuk, majd lekapcsoljuk a főzőlapot és fedő alatt, a gőzben hagyjuk megpuhulni. A tejszínt 1 csomag vaníliás cukorral habbá verjük, ha szükséges habfixálóval segíthetünk javítani az állagán. Majd a kihűlt tejberizsbe keverjük. Tálkába szedjük (1 réteg tejszínes rizs, 1 réteg gyümölcs és így tovább). Hidegen tálaljuk.</string>
    <string name="avokado">Az avokádókat hosszában félbevágjuk, kivesszük a magját, majd karalábévájóval megnagyobbítjuk a mag helyét. Gömbölyű oldalukkal lefelé tűzálló tálra tesszük, amit előzőleg kivajaztunk. A lyukakba beleütjük a tojásokat, megsózzuk, borsozzuk, majd az előmelegített sütőben 180 fokon megsütjük.</string>
    <string name="meggyes_zabkasa">A zabpelyhet és a tejet beleöntjük a lábosba, és elkezdjük főzni. Folyamatosan kevergetjük, majd ha elkezdett forrni, hozzáadjuk az édesítőszert ízlés szerint és a meggyet. Miután forrt egy picit, el is lehet zárni. Ilyenkor már össze kell állnia. És végül tálaljuk. Meggylekvárral isteni!</string>
    <string name="bubbles_and_squeak">A zöldségeket sós vízben (vagy levesben) megfőzzük, közben megpirítjuk a szalonnát. A leszűrt zöldségeket egy edényben pépesre dolgozzuk, közben hozzáadjuk a szalonnát és a fűszereket. A szalonna zsírján megsütjük mindkét oldalát. A sütés felénél lyukat csinálunk a közepére, és beleütünk egy tojást. Arra érdemes odafigyelni, hogy a pép legalább fele krumpli legyen, mivel sütés közben ezt tartja össze az ételt.</string>
    <string name="daralthusos">A darált húst keverjük össze az oregánóval, chilipehellyel, fokhagymaporral, sóval meg szerecsendióval.Egy nagy serpenyőben hevítsük fel az olajat, és közepes lángon süssük a húst addig, amíg kifehéredik. Adjuk hozzá a karikára vágott újhagymát, és azzal is kevergessük egy percet. Rakjuk bele a puha krémsajtot, a reszelt sajtot, morzsoljuk hozzá a kecskesajtot. Csak addig hagyjuk a tűzön, amíg a sajt olvadni kezd. Öntsük egy kicsi tepsibe az egészet. Szórjuk a tetejére a spenótot, a kockára vágott paprikát. A tojást kicsit verjük fel 2 csipet sóval, és öntsük a tepsibe. Fóliázzuk le, és tegyük éjszakára a hűtőbe. Másnap reggel vegyük ki a tepsit a hűtőből, gyújtsuk be a sütőt. Amikor bemelegedett, rakjuk be a tepsit, és 180 fokon süssük meg.</string>
    <string name="tojasos_omlett">A leveles tésztát kicsomagoljuk, a közepét megkenjük a sajtkrémmel úgy, hogy a szélén körben egy centis peremet hagyunk. Megszórjuk reszelt sajttal, ráfektetjük a baconszeleteket, megszórjuk újhagymakarikákkal, és óvatosan ráütjük a tojásokat. 200 fokos sütőben 15 perc alatt készre sütjük.</string>
    <string name="low_carb">Felverjük a tojásokat. A felaprított petrezselymet, snidlinget és a fűszereket hozzáadjuk. Egy palacsintasütőt beolajazunk, feltesszük melegedni, és beleöntjük a tojást. Amikor az kifehéredett nagyjából, ráhelyezzük a baconszeleteket (úgy, hogy kicsit beletapadjanak), majd egy óvatos, de határozott mozdulattal (nehogy szétszakadjon) megfordítjuk a tojást, mint egy palacsintát. Ekkor rászórjuk a sajtot, rátesszük a sonkát. Amikor már látjuk, hogy megpirul a bacon, a tojás egyik oldalát ráhajtjuk a másikra.</string>
    <string name="amcsi_palacsinta">Az almát megpucoljuk, lereszeljük és kinyomkodjuk. Beletesszük egy tálba. Hozzáadjuk a tojást és a zabpelyhet, csipet sót és ízlés szerint fahéjat, és valamilyen édesítőt. Mindent összekeverünk és annyi zabpehelylisztet adunk hozzá, hogy egy sűrű masszát kapjunk. Serpenyőben a zsiradékot felmelegítjük. Kis adagokban megsütjük mind két oldalát, amire nagyon figyelni kell, hogy hamar pirul, így nem kell iszonyat forró serpenyő.</string>
    <string name="mini_pizza">A paprikákat felvágjuk, olívaolajjal meglocsoljuk, sózzuk és borsozzuk. Majd rákenjük a pizzaszószt. A sajtokat lereszeljük, a pizzaszószos paprikába tesszük, majd ráhelyezzük a kolbászt vagy más feltétet. A sütőt előmelegítjük 150 fokra, sütőpapíros tepsibe pakoljuk a mini paprikás pizzákat. Mellé tesszük a félbevágott paradicsomokat, amire a maradék sajt mellé oregánó, bazsalikom, valamint só és bors kerül ízlés szerint.50 percig 150 fokon sütjük, majd a kész mini pizzákat ízlés szerint tovább ízesíthetjük.</string>
    <string name="libacomb">A libacomb előkészítése során tollak és a tokok eltávolítása az elsődleges (csipesszel könnyebb). Alaposan sózzuk, majd borsozzuk, kevés szárított majoránnával fűszerezzük. (Jómagam a nagyobb hájdarabokat is eltávolítom, de a tepsibe teszem a zsírja miatt.) Kacsazsírral és egy kevés vízzel jól zárható tepsiben - a rozmaringágak hozzáadásával - alacsony hőmérsékleten kezdjük sütni. (160 fok) Kb. 1 óra sütést követően a sütőt lekapcsoljuk, és hagyjuk kb. fél órát a tepsiben lefedve párolódni. Addig a zöldségeket és birsalmát előkészítjük. Nagy, kb. egyforma darabokra szeljük azokat, a birsalma magházát eltávolítjuk. A burgonyákat sózzuk. A libacomb pihentetése után tesszük a tepsibe a zöldségeket, a fokhagymát, a birsalmát (kevés mézet csorgatunk a kivájt magházba), sárgarépát, majd picit később burgonyát, legvégül az édesburgonyát. Ismét 160 fok körül sütjük. Néhányszor a combokat meglocsoljuk a zsírral. A cél, hogy a libacomb bőre szép pirosra, a zöldségek aranybarnára süljenek. Ha szükséges, akkor a tepsi fedele nélkül is lehet pirítani a legvégén, de ügyeljünk, ne száradjon ki a libahús.</string>
    <string name="karajszeletek">Előző este vagy sütés előtt 2-3 órával a karajt szeletekre vágjuk. Kiklopfoljuk, borsozzuk. Egy méretes tálba egymásra rakjuk a szeleteket. Fóliával letakarva hűtőbe tesszük. A hagymát és a burgonyát tisztítás után vékony karikákra, a paradicsomot pedig vastagabb szeletekre vágjuk. A tejfölben elkeverjük a mustárt. Egy méretes tepsibe vagy tűzálló tálba tesszük az olajat, majd egymás mellé belefektetjük a szelet húsokat. Sózzuk. A szeleteket megkenjük a mustáros tejföllel. Erre helyezünk egy sor hagymakarikát, majd erre egy sor vékony nyers burgonya kerül. A burgonyára teszünk szintén egy sor paradicsom karikát (ez kb. 2-3 db szeletenként). Alufóliával letakarva előmelegített 180 C-os sütőbe tesszük 20-25 percre. Az idő letelte után kivesszük a sütőből. Levesszük a fóliát. A szeletekre bőven teszünk reszelt sajtot. Visszatesszük a sütőbe annyi dőre, amíg a sajt megolvad és aranyszínűre pirul.</string>
    <string name="tonhal_steak">Elkészítés előtt egy-két órával a halszeleteket bedörzsöljük olívaolajjal és durvára tört borssal, majd tálalás előtt felforrósított serpenyőben oldalanként 2-2 percig sütjük (így a közepe rózsaszín marad). Ezután ízesítjük a sóval. Az édesburgonyát, meghámozzuk, kockára vágjuk, sós vízben puhára főzzük, végül pürésítjük. Hogy még krémesebb legyen, a végén adhatunk hozzá vajat és tejszínt. A spenótot megmossuk, majd olívaolaj és frissen facsart citromlé keverékével locsoljuk meg.</string>
    <string name="zoldseges_husgolyo">A darált húshoz adjuk a vízbe (vagy tejbe) áztatott, kinyomkodott zsemléket, tojást, fűszerpaprikát, zsemlemorzsát, ízlés szerint sót, fűszereket, és gombócokat formázunk belőle. Olajon megdinszteljük a kockára vágott lila hagymát. Rátesszük a szeletelt gombát és paprikát .Amikor látni, hogy a paprika megsült, hozzáadjuk a sűrített paradicsomot, zúzott fokhagymát, felöntjük vízzel, ízlés szerint sózzuk, fűszerezzük. Beletesszük a húsgolyókat, és fedő alatt kb. 30 percig főzzük. Amikor látjuk, hogy elkészült, levesszük a tűzről, ráborítjuk a tejfölt, visszatesszük a tűzre, és óvatosan, átforgatva pár percig átkeverjük.</string>
</resources>